<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SMSSpywareActivity">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_phone_incoming" />

    <TextView
        android:id="@+id/txtPhoneIncoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7AC4E7"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_date_delivery" />

    <TextView
        android:id="@+id/txtDateDelivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BBEAFF"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_message_body" />

    <TextView
        android:id="@+id/txtMessageBody"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="#FDF9D2"
        android:text="TextView" />
</LinearLayout>